# database-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
databasemanager/: manager.py
