[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "databasemanager"
version = "0.1.0"
description = "Gerenciador de banco de dados fluido para integração com Pandas e ORM."
authors = [
    {name = "Jose Vitor Alves Coelho", email = "seu-email@exemplo.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "pyodbc>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]